# dg2xgcCoupling

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.sh  couplerun.sh  dg2xgcCoupler.cpp  dg2xgcfieldAdapter.h  dummydg2.cpp  dummyxgc.cpp  fine2coarse_interpolation.cpp  main.cpp  node2cell.cpp  node2cell.hpp  plot_analysis.ipynb
